[bumpversion]
current_version = 2.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:v4l2py/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 0

[options.extras_require]
test = 
	pytest>=6
	pytest-cov>=2
	pytest-asyncio>=0.15
	flake8>=3.9
	tox>=3.24

[aliases]
test = pytest

[tool:pytest]
addopts = -v --cov-config=.coveragerc --cov v4l2py
	--cov-report html --cov-report term
	--durations=2 --verbose

[flake8]
max-line-length = 120
max-complexity = 12
select = E,F,W,C,B,B9
ignore = 
	E123
	E203
	E501
	W503
	W504
	C901
	E402
per-file-ignores = __init__.py:F401

[tox:tox]
envlist = py3
